--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.2",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.1",
     "framer-motion": "^10.12.2",
@@ -18,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-tilt": "^1.0.2",
+    "react-tooltip": "^5.11.1",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.151.3"
   },
