--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.12.2",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.1",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "framer-motion": "^10.12.2",
     "maath": "^0.5.3",
     "react": "^18.2.0",
